import React from 'react'
import { shallow } from 'enzyme'
import { ExpensesSummary } from '../../components/ExpensesSummary'

test('should render ExpensesSummary correctly with 1 expense', () => {
  const wrapper = shallow(<ExpensesSummary expenseCount={ 1 } expensesTotal={ 234 } />)
  expect(wrapper).toMatchSnapshot()
})

test('should render ExpensesSummary correctly with multiple expense', () => {
  const wrapper = shallow(<ExpensesSummary expenseCount={ 23 } expensesTotal={ 23142354233 } />)
  expect(wrapper).toMatchSnapshot()

})
