// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     Totalling 
    $2.34
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expense 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     Totalling 
    $231,423,542.33
  </p>
</div>
`;
